2020-01-09:
  - Document getSummary.mmclogit, getSummary.mmblogit
  - Make 'mblogit' handle matrix responses with zero-sum rows

2019-10-23:
  - Merge pull request #3 from skyborla/fix-mblogit
    Fix mblogit for responses with only two levels
  - Export getSummary.mmclogit, getSummary.mmblogit  

2019-04-20:
  - Let 'mmblogit' models inherit from class 'mblogit'

2019-02-04:
  - Merged pull request #2 from pmcharrison/ftt-fix:
    Fixed typo (ftt -> fit)
		
2018-09-26:
  - Fixed matrix column selection in predict.mclogit if there is only one
    predictor (also PR from skyborla)

2018-04-25:
  - Improved handling of with misspecified random effect structures.
  - Added documentation about new handling of misspecified models.

2017-10-25:
  - Fixed handling of dropped predictors in `predict.mclogit`.

2017-01-26:
  - Fixed some bugs in predict models for `mclogit` objects.
  - Made sure that dummy coding is used for response factors even if they are ordinal

2017-01-07:
  - Implemented random slopes for baseline logit models.

2017-01-05:
  - Implemented random slopes for conditional logit models.

2016-09-01:
  - Fixed `mclogit.fit()` and `predict.mclogit()` to work better without covariates.

2016-02-07:
  - Explicitely import package "methods"

2016-01-17:
  - Import `as` from package "methods".
  - Make sure `nobs` is defined in `mclogit.fit.rePQL`.

2016-01-16:
  - Updated `DESCRIPTION` file: Maintainer email address changed and no "This package"
    at start of package discriptions.

2015-10-08:
  - Fix display of number of observations
  - Drop redundant coefficients

2015-08-01:
  - Added row and column names to estimator result of `vcov()`
  - Make sure that scripts run with "mclogit" loaded by `devtools::load_all()`

2015-07-15:
  - mclogit, mclogit.fit: Added support for starting values.

2015-07-03:
  - predict.mblogit: 'contrasts.arg' not 'contast.arg' ...
  - predict-methods now should handle NAs in newdata arguments better.

2015-06-17: