@@ -98,7 +98,7 @@ mclogit.fit <- function(
         working.residuals = (y-pi)/pi,
         working.weights = w,
         response.residuals = y-pi,
-        residual.df = resid.df,
+        df.residual = resid.df,
         model.df = model.df,
         fitted.values = pi,
         deviance=deviance,
@@ -518,7 +518,7 @@ mmclogit.fitPQL <- function(
         deviance.residuals=dev.resids,
         working.residuals=(y-pi)/pi,
         response.residuals=y-pi,
-        residual.df = resid.df,
+        df.residual = resid.df,
         model.df = model.df,
         iter = iter,
         y = y,
